--- a/KrSuma/Prototype_Dataset_Sample/Daebak.ipynb
+++ b/KrSuma/Prototype_Dataset_Sample/Daebak.ipynb
@@ -8,7 +8,11 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "import os \n",
+    "import tarfile\n",
+    "import urllib\n",
+    "\n",
+    "DOWNLOAD_ROOT = \"\"\n"
    ]
   }
  ],
@@ -29,6 +33,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
