--- a/KrSuma/DataMining/CollaborativeFiltering.ipynb
+++ b/KrSuma/DataMining/CollaborativeFiltering.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "is_executing": false
+     "is_executing": true
     }
    },
    "outputs": [],
