added deviations, slope one filtering

--- a/KrSuma/DataMining/ItemBasedFiltering/ItemBasedFiltering.ipynb
+++ b/KrSuma/DataMining/ItemBasedFiltering/ItemBasedFiltering.ipynb
@@ -31,8 +31,24 @@
     "            numerator += (ratings[item1]-avg) * (ratings[item2] - avg)\n",
     "            denominator1 += (ratings[item1]-avg)**2\n",
     "            denominator2 += (ratings[item2]-avg)**2\n",
-    "    return numerator / (sqrt(denominator1) * sqrt(denominator2))\n"
+    "    return numerator / (sqrt(denominator1) * sqrt(denominator2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Slope-one predictors collaborative filtering\n",
+    "'''\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
