arranged modules, added Classifier

--- a/KrSuma/DataMining/ItemBasedFiltering/ItemBasedFiltering.ipynb
+++ b/KrSuma/DataMining/ItemBasedFiltering/ItemBasedFiltering.ipynb
@@ -41,7 +41,28 @@
    "source": [
     "'''\n",
     "Slope-one predictors collaborative filtering\n",
-    "'''\n"
+    "'''\n",
+    "def slopeOneRecommendations(self, userRatings):\n",
+    "      recommendations = {}\n",
+    "      frequencies = {}\n",
+    "      for (userItem, userRating) in userRatings.items():\n",
+    "         for (diffItem, diffRatings) in self.deviations.items():\n",
+    "            if diffItem not in userRatings and \\\n",
+    "               userItem in self.deviations[diffItem]:\n",
+    "               freq = self.frequencies[diffItem][userItem]\n",
+    "               recommendations.setdefault(diffItem, 0.0)\n",
+    "               frequencies.setdefault(diffItem, 0)\n",
+    "               recommendations[diffItem] += (diffRatings[userItem] + userRating) * freq\n",
+    "               frequencies[diffItem] += freq\n",
+    "    '''  \n",
+    "      recommendations =  [(self.convertProductID2name(k),\n",
+    "                           v / frequencies[k])   \n",
+    "                          for (k, v) in recommendations.items()]\n",
+    "\n",
+    "      recommendations.sort(key=lambda artistTuple: artistTuple[1],\n",
+    "                           reverse = True)\n",
+    "    '''\n",
+    "      return recommendations\n"
    ],
    "metadata": {
     "collapsed": false,
